--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx parcel src/index.html",
-    "build": "npx parcel build src/index.html"
+    "dev": "npx parcel src/index.html src/admin.html",
+    "build": "npx parcel build src/index.html src/admin.html"
   },
   "keywords": [],
   "author": "",
