--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "staticFiles": {
+    "staticPath": "./src/images/slideshow"
+  },
   "devDependencies": {
     "parcel": "^2.4.1",
+    "parcel-reporter-static-files-copy": "^1.3.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
